add prototype to work as DiKomAll proxy server to fetch KoboToolbox data
